--- a/styles.scss
+++ b/styles.scss
@@ -30,12 +30,15 @@ nav {
   height: 9vh;
   z-index: 2;
 
+  .burger {
+    display: none;
+  }
+
   .logo {
     max-height: 9vh;
     box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
     border: 2px color(accent1) solid;
-    margin: 0;
 
     a {
       font-family: 'Quicksand';
@@ -51,7 +54,7 @@ nav {
 
   .nav-links {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 50%;
     align-items: center;
     margin-bottom: 0;
@@ -109,10 +112,13 @@ header {
     align-items: center;
     margin-bottom: 0;
     min-height: 91vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-      url(./images/heropic.png) no-repeat center;
+    // background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    //   url(./images/headerpic-pexels.jpg) no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url(./images/section1bg.png) no-repeat center;
     background-attachment: fixed;
     background-size: cover;
+    background-position: top;
     padding: 0;
 
     .container {
@@ -195,10 +201,11 @@ header {
 
 #about {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(./images/section1bg.png) no-repeat center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./images/headerpic-pexels.jpg) no-repeat center;
   background-attachment: fixed;
   background-size: cover;
+  background-position: top;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -320,9 +327,10 @@ header {
 
 #pricing {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(./images/pricingbg-pexels.png) no-repeat center;
   background-attachment: fixed;
+  background-position: top;
   background-size: cover;
   width: 100%;
   display: flex;
@@ -381,6 +389,8 @@ header {
           padding-top: 0.7rem;
 
           h1 {
+            letter-spacing: 1px;
+            font-weight: bold;
             margin-bottom: 0;
             text-shadow: $text-shadow;
             font-size: 2rem;
@@ -394,7 +404,8 @@ header {
             }
 
             span {
-              font-weight: 600;
+              letter-spacing: 1px;
+              color: color(textColor);
               font-size: 1rem;
               display: block;
             }
@@ -427,17 +438,18 @@ header {
       }
     }
     .popular {
-      background-color: rgba(187, 178, 178, 0.65) !important;
+      background-color: rgba(173, 102, 102, 0.65) !important;
     }
   }
 }
 
 #contact {
   padding-top: 9vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(./images/contact-pexels.png) no-repeat center;
   background-attachment: fixed;
   background-size: cover;
+  background-position: top;
   width: 100%;
   display: flex;
   justify-content: center;
