--- a/styles.css
+++ b/styles.css
@@ -86,31 +86,6 @@ input:-webkit-autofill {
           animation-fill-mode: both;
 }
 
-@media screen and (max-width: 700px) {
-  * {
-    font-size: 13px;
-  }
-  .about-img1 {
-    display: none;
-  }
-  .about-img2 {
-    display: none;
-  }
-  .about-img2 {
-    display: none;
-  }
-  .about .about-text {
-    width: 100% !important;
-  }
-  .btn {
-    background-color: #e03a3a;
-    border: 2px solid #e03a3a;
-  }
-  .btn span {
-    color: #f1ecec;
-  }
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -151,6 +126,16 @@ nav {
 
 nav .burger {
   display: none;
+  cursor: pointer;
+}
+
+nav .burger div {
+  width: 1.5rem;
+  height: 3px;
+  background-color: #f1ecec;
+  margin: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 nav .logo {
@@ -325,7 +310,6 @@ header .jumbotron .container a i:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 40vh;
   margin: 0;
   -webkit-box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
           box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
@@ -333,6 +317,7 @@ header .jumbotron .container a i:hover {
 }
 
 .filler .container {
+  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -348,12 +333,8 @@ header .jumbotron .container a i:hover {
           flex-direction: column;
 }
 
-.filler .container p {
-  font-style: italic;
-  font-family: 'Roboto';
-  font-weight: bold;
-  text-align: center;
-  font-size: 1.5rem;
+.filler .container h1 {
+  font-family: 'Quicksand';
 }
 
 .filler .container .blockquote-footer {
@@ -372,6 +353,10 @@ header .jumbotron .container a i:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -388,9 +373,9 @@ header .jumbotron .container a i:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -715,8 +700,8 @@ header .jumbotron .container a i:hover {
 
 #contact .container .contact-form {
   background-color: rgba(187, 178, 178, 0.5) !important;
-  -webkit-box-shadow: 2px 2px 10px #585858bb;
-          box-shadow: 2px 2px 10px #585858bb;
+  -webkit-box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
+          box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 }
 
 #contact .container .contact-form form {
@@ -797,5 +782,114 @@ header .jumbotron .container a i:hover {
 #footer .container-fluid .foot {
   background: -webkit-gradient(linear, left top, right top, from(#131313), color-stop(#303030), to(#131313));
   background: linear-gradient(to right, #131313, #303030, #131313);
+}
+
+@media screen and (max-width: 768px) {
+  * {
+    font-size: 13px;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  nav .burger {
+    display: block !important;
+  }
+  nav .toggle .line1 {
+    -webkit-transform: rotate(-45deg) translate(-5px, 6px);
+            transform: rotate(-45deg) translate(-5px, 6px);
+    background-color: #e03a3a;
+  }
+  nav .toggle .line2 {
+    opacity: 0;
+  }
+  nav .toggle .line3 {
+    -webkit-transform: rotate(45deg) translate(-5px, -6px);
+            transform: rotate(45deg) translate(-5px, -6px);
+    background-color: #e03a3a;
+  }
+  nav .nav-links {
+    position: absolute;
+    right: 0px;
+    height: 91vh;
+    top: 9vh;
+    background-color: #323539a9;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 50%;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 0.5s ease-in;
+    transition: -webkit-transform 0.5s ease-in;
+    transition: transform 0.5s ease-in;
+    transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
+  }
+  nav .nav-links #contactLink a {
+    color: #f1ecec !important;
+    background-color: #e03a3a;
+    border: 2px solid #e03a3a !important;
+  }
+  nav .nav-links li {
+    opacity: 0;
+  }
+  .nav-active {
+    -webkit-transform: translateX(0%) !important;
+            transform: translateX(0%) !important;
+  }
+  .about-img1 {
+    display: none;
+  }
+  .about-img2 {
+    display: none;
+  }
+  .about-img2 {
+    display: none;
+  }
+  .about .about-text {
+    width: 100% !important;
+  }
+  .btn {
+    background-color: #e03a3a;
+    border: 2px solid #e03a3a;
+  }
+  .btn span {
+    color: #f1ecec;
+  }
+  #footer {
+    height: auto;
+  }
+  #footer .container-fluid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
+@-webkit-keyframes navFade {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+}
+
+@keyframes navFade {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
 }
 /*# sourceMappingURL=styles.css.map */
