--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,4 @@
 @import './config';
-@import './media';
 
 * {
   margin: 0;
@@ -32,6 +31,15 @@ nav {
 
   .burger {
     display: none;
+    cursor: pointer;
+
+    div {
+      width: 1.5rem;
+      height: 3px;
+      background-color: color(textColor);
+      margin: 5px;
+      transition: all 0.3s ease;
+    }
   }
 
   .logo {
@@ -173,24 +181,28 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 40vh;
   margin: 0;
   box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
   text-shadow: 5px 5px 6px rgb(0, 0, 0);
 
   .container {
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
-    p {
-      font-style: italic;
-      font-family: 'Roboto';
-      font-weight: bold;
-      text-align: center;
-      font-size: 1.5rem;
+    h1 {
+      font-family: 'Quicksand';
     }
+
+    // p {
+    //   font-style: italic;
+    //   font-family: 'Roboto';
+    //   font-weight: bold;
+    //   text-align: center;
+    //   font-size: 1.5rem;
+    // }
 
     .blockquote-footer {
       color: #f1ececa8;
@@ -208,6 +220,7 @@ header {
   background-position: top;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   min-height: 100vh;
   padding-bottom: 9vh;
@@ -216,7 +229,7 @@ header {
     margin-top: 1.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
     h4 {
@@ -487,7 +500,7 @@ header {
 
     .contact-form {
       background-color: rgba(187, 178, 178, 0.5) !important;
-      box-shadow: 2px 2px 10px #585858bb;
+      box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 
       form {
         padding: 3rem;
@@ -558,3 +571,5 @@ header {
     }
   }
 }
+
+@import './media';
