--- a/styles.css
+++ b/styles.css
@@ -782,6 +782,62 @@ header .jumbotron .container a i:hover {
 #footer .container-fluid .foot {
   background: -webkit-gradient(linear, left top, right top, from(#131313), color-stop(#303030), to(#131313));
   background: linear-gradient(to right, #131313, #303030, #131313);
+  display: -ms-grid;
+  display: grid;
+}
+
+#footer .container-fluid .foot .logo {
+  padding-top: 6rem;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+#footer .container-fluid .foot .logo a {
+  -webkit-box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
+          box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+  border: 2px #e03a3a solid;
+  font-family: 'Quicksand';
+  letter-spacing: 1.5px;
+  padding: 0.2rem;
+  font-size: 3rem;
+  font-weight: bolder;
+  color: #e03a3a;
+  margin-bottom: 0;
+  text-decoration: none;
+}
+
+#footer .container-fluid .foot .address {
+  -ms-grid-column-align: center;
+      justify-self: center;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  text-align: center;
+}
+
+#footer .container-fluid .foot .footer-links {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  text-align: center;
+}
+
+#footer .container-fluid .foot .footer-links ul {
+  margin: 0;
+}
+
+#footer .container-fluid .foot .footer-links ul a {
+  padding: 0 1rem;
+}
+
+#footer .container-fluid .foot .copy-right {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  text-align: center;
+  padding-bottom: 0.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -846,6 +902,25 @@ header .jumbotron .container a i:hover {
   .about-img2 {
     display: none;
   }
+  .jumbotron .container .display-3 {
+    width: 80%;
+    font-size: 3rem;
+    text-align: center;
+    padding: 0;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .jumbotron .container .display-4 {
+    padding: 0;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    font-size: 2.5rem;
+  }
+  .display-4 {
+    font-size: 2.5rem;
+  }
   .about .about-text {
     width: 100% !important;
   }
@@ -856,14 +931,15 @@ header .jumbotron .container a i:hover {
   .btn span {
     color: #f1ecec;
   }
-  #footer {
-    height: auto;
-  }
   #footer .container-fluid {
+    height: 91vh;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+  }
+  #footer .container-fluid .foot .logo {
+    padding-top: 3rem;
   }
 }
 
