--- a/styles.scss
+++ b/styles.scss
@@ -568,6 +568,50 @@ header {
 
     .foot {
       background: linear-gradient(to right, #131313, #303030, #131313);
+      display: grid;
+      .logo {
+        padding-top: 6rem;
+        grid-row: 1;
+        align-self: flex-end;
+        justify-self: center;
+
+        a {
+          box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, 0.5);
+          border-radius: 8px;
+          border: 2px color(accent1) solid;
+          font-family: 'Quicksand';
+          letter-spacing: 1.5px;
+          padding: 0.2rem;
+          font-size: 3rem;
+          font-weight: bolder;
+          color: color(accent1);
+          margin-bottom: 0;
+          text-decoration: none;
+        }
+      }
+      .address {
+        justify-self: center;
+        align-self: flex-end;
+        text-align: center;
+      }
+
+      .footer-links {
+        align-self: flex-end;
+        text-align: center;
+
+        ul {
+          margin: 0;
+          a {
+            padding: 0 1rem;
+          }
+        }
+      }
+
+      .copy-right {
+        align-self: flex-end;
+        text-align: center;
+        padding-bottom: 0.5rem;
+      }
     }
   }
 }
