adjusted some dimensions of footer and nav for responsiveness

--- a/_media.scss
+++ b/_media.scss
@@ -25,6 +25,7 @@
     }
 
     .nav-links {
+      padding: 3rem 0;
       position: absolute;
       right: 0px;
       height: 91vh;
@@ -110,7 +111,7 @@
 
       .foot {
         .logo {
-          padding-top: 3rem;
+          padding-top: 1rem;
         }
       }
     }
