--- a/styles.scss
+++ b/styles.scss
@@ -611,6 +611,7 @@ header {
         align-self: flex-end;
         text-align: center;
         padding-bottom: 0.5rem;
+        font-size: 0.6rem;
       }
     }
   }
