--- a/styles.scss
+++ b/styles.scss
@@ -119,7 +119,7 @@ nav {
 
 header {
   min-height: 91vh;
-  overflow: hidden;
+  // overflow: hidden;
 
   .jumbotron {
     display: flex;
@@ -127,8 +127,6 @@ header {
     align-items: center;
     margin-bottom: 0;
     min-height: 100vh;
-    // background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    //   url(./images/headerpic-pexels.jpg) no-repeat center;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       url(./images/section1bg.png) no-repeat center;
     background-attachment: fixed;
@@ -202,14 +200,6 @@ header {
     h1 {
       font-family: 'Quicksand';
     }
-
-    // p {
-    //   font-style: italic;
-    //   font-family: 'Roboto';
-    //   font-weight: bold;
-    //   text-align: center;
-    //   font-size: 1.5rem;
-    // }
 
     .blockquote-footer {
       color: #f1ececa8;
@@ -622,10 +612,6 @@ header {
       }
     }
   }
-}
-
-.page {
-  overflow-x: hidden;
 }
 
 @import './media';
