--- a/_media.scss
+++ b/_media.scss
@@ -3,9 +3,9 @@
     font-size: 13px;
   }
 
-  body {
-    overflow-x: hidden;
-  }
+  // body {
+  //   overflow-x: hidden;
+  // }
 
   nav {
     .burger {
