trying to fix mobile scrolling issue3

--- a/_media.scss
+++ b/_media.scss
@@ -3,9 +3,10 @@
     font-size: 13px;
   }
 
-  // body {
-  //   overflow-x: hidden;
-  // }
+  html,
+  body {
+    overflow-x: hidden;
+  }
 
   nav {
     .burger {
