--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,8 @@ nav {
   background: -webkit-gradient(linear, right top, left top, from(#131313), to(#303030));
   background: linear-gradient(to left, #131313, #303030);
   top: 0;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   -webkit-box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
           box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
   display: -webkit-box;
