--- a/styles.css
+++ b/styles.css
@@ -210,11 +210,8 @@ nav .nav-links #contactLink a:hover {
           box-shadow: 10px 12px 16px -7px rgba(0, 0, 0, 0.68);
 }
 
-header {
-  min-height: 91vh;
-}
-
 header .jumbotron {
+  min-height: 91vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -900,6 +897,9 @@ header .jumbotron .container a i:hover {
   }
   .about-img2 {
     display: none;
+  }
+  .jumbotron {
+    height: 91vh;
   }
   .jumbotron .container .display-3 {
     width: 80%;
