--- a/styles.scss
+++ b/styles.scss
@@ -196,13 +196,9 @@ header {
       font-family: 'Quicksand';
     }
 
-    // p {
-    //   font-style: italic;
-    //   font-family: 'Roboto';
-    //   font-weight: bold;
-    //   text-align: center;
-    //   font-size: 1.5rem;
-    // }
+    p {
+      text-align: center;
+    }
 
     .blockquote-footer {
       color: #f1ececa8;
