--- a/styles.css
+++ b/styles.css
@@ -337,6 +337,10 @@ header .jumbotron .container a i:hover {
   font-family: 'Quicksand';
 }
 
+.filler .container p {
+  text-align: center;
+}
+
 .filler .container .blockquote-footer {
   color: #f1ececa8;
   font-size: 1.5rem;
@@ -845,6 +849,7 @@ header .jumbotron .container a i:hover {
   * {
     font-size: 13px;
   }
+  html,
   body {
     overflow-x: hidden;
   }
@@ -939,6 +944,12 @@ header .jumbotron .container a i:hover {
         grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+  }
+  #footer .container-fluid .map {
+    max-height: 45.5vh;
+  }
+  #footer .container-fluid .foot {
+    max-height: 45.5vh;
   }
   #footer .container-fluid .foot .logo {
     padding-top: 1rem;
