--- a/styles.scss
+++ b/styles.scss
@@ -589,6 +589,30 @@ header {
         justify-self: center;
         align-self: flex-end;
         text-align: center;
+
+        span {
+          color: color(textColor);
+        }
+
+        a {
+          text-decoration: none;
+          color: color(textColor);
+
+          &:hover {
+            color: color(linkHover2);
+          }
+        }
+      }
+
+      .footer-links {
+        a {
+          text-decoration: none;
+          color: color(accent1);
+
+          &:hover {
+            color: color(linkHover);
+          }
+        }
       }
 
       .footer-links {
