--- a/styles.scss
+++ b/styles.scss
@@ -77,6 +77,7 @@ nav {
       font-family: 'Quicksand';
       font-size: 1.2rem;
       font-weight: bold;
+      padding: 0.4rem 0.6rem;
       letter-spacing: 2px;
       color: color(textColor);
       text-decoration: none;
@@ -205,6 +206,10 @@ header {
       font-size: 1.5rem;
     }
   }
+}
+
+#about1 {
+  padding: 9vh 0;
 }
 
 #about {
